--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-native-gesture-handler": "^2.7.1",
     "react-native-paper": "5.0.0-rc.6",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-screens": "^3.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
